nesc-frontend/src/test/resources/integration/programs/bad/bad25/M1.nc
module M1
{
   uses command void c();
   provides event void e();
}
implementation
{
   event void e()
   {
      call c();
   }
}
